2002-09-27  Theodore A. Roth  <troth@verinet.com>

	* libc/stdlib/malloc.c: Remove cast from STACK_POINTER macro.

2002-09-27  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* include/setjmp.h: Add extern "C" for C++ usage.

2002-09-25  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* doc/api/tools-install.dox: Move note about reconf and cvs up.

2002-09-17  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* include/avr/sfr_defs.h (_VECTOR): Move above #ifndef __ASSEMBLER__.

2002-09-11  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.
	* doc/api/faq.dox: Cleanups and add examples.

2002-09-11  Theodore A. Roth  <troth@verinet.com>

	* doc/TODO: Remove include/stdlib.h.
	* include/stdlib.h: Misc cleanups.

2002-09-10  Theodore A. Roth  <troth@verinet.com>

	* configure.in(AM_INIT_AUTOMAKE): Bump version.

2002-09-09  Theodore A. Roth  <troth@verinet.com>

	* libc/string/strstr.S: Fix dox (s/needle/s2/ and s/haystack/s1/).

2002-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add three subsections.

2002-09-09  Theodore A. Roth  <troth@verinet.com>

	* doc/TODO: Added note about testsuite.

2002-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: improve grouping for old doxygen versions.

2002-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/malloc.c: use _SFR_IO16() around the SP address.

2002-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: rename DTOSTRE_* into DTOSTR_*.
	* libm/fplib/dtostre.S: rename DTOSTRE_* into DTOSTR_*.

2002-09-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: document this file.
	* libm/fplib/dtostre.S: use <stdlib.h>.

2002-09-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/dtostre.S: another leading "0" fix.

2002-09-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/dtostre.S: don't print "." iff prec == 0.
